--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,8 @@
     "description": "A chrome extension developed for automatically opening zoom links!",
     "version": "1.0",
     "manifest_version": 3,
-    "permissions": ["storage"],
+    "options_page": "options.html",
+    "permissions": ["storage", "activeTab", "scripting"],
     "action": {
         "default_popup": "popup.html",
         "default_icon": {
@@ -12,5 +13,11 @@
             "48": "/images/get_started48.png",
             "128": "/images/get_started128.png"
           }
+    },
+    "icons": {
+        "16": "/images/get_started16.png",
+        "32": "/images/get_started32.png",
+        "48": "/images/get_started48.png",
+        "128": "/images/get_started128.png"
     }
   }
