--- a/manifest.json
+++ b/manifest.json
@@ -8,16 +8,14 @@
     "action": {
         "default_popup": "popup.html",
         "default_icon": {
-            "16": "/images/get_started16.png",
-            "32": "/images/get_started32.png",
-            "48": "/images/get_started48.png",
-            "128": "/images/get_started128.png"
+            "16": "/images/fuzelogo16.png",
+            "32": "/images/fuzelogo32.png",
+            "48": "/images/fuzelogo48.png"
           }
     },
     "icons": {
-        "16": "/images/get_started16.png",
-        "32": "/images/get_started32.png",
-        "48": "/images/get_started48.png",
-        "128": "/images/get_started128.png"
+        "16": "/images/fuzelogo16.png",
+        "32": "/images/fuzelogo32.png",
+        "48": "/images/fuzelogo48.png"
     }
   }
